fixed bug in testStrongerTwoPairsToWeakerTwoPairsComparison(), changed ranking rules in testStrongerStraightToWeakerStraightComparison(), added same pairs/twoPairs tests